--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "silebot",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js","type": "module",
+  "main": "app.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node index.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "express": "^4.18.2"
   }
 }
